--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=7.0.0",
         "encore/laravel-admin": "^1.7",
         "fideloper/proxy": "~3.3",
+        "laravel-admin-ext/china-distpicker": "^1.4",
         "laravel-admin-ext/helpers": "^1.1",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
