--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel-admin-ext/helpers": "^1.1",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "overtrue/easy-sms": "^1.1",
         "overtrue/laravel-lang": "~3.0"
     },
     "require-dev": {
